<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:id="@+id/imageView_poster_shimmer"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:text="@string/title"
        android:textSize="14sp"
        android:background="@color/grey"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_title_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:maxLines="3"
        android:textColor="@color/black"
        android:background="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/textView_shimmer"
        tools:text="@string/dummy_title" />

    <TextView
        android:id="@+id/tv_detail_genre_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:maxLines="2"
        android:background="@color/grey"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/textView3_shimmer"
        tools:text="@string/dummy_text" />

    <TextView
        android:id="@+id/tv_detail_date_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:background="@color/grey"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/textView5_shimmer"
        tools:text="@string/dummy_text" />

    <TextView
        android:id="@+id/tv_detail_language_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/black"
        android:background="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/textView6_shimmer"
        tools:text="@string/dummy_text" />

    <TextView
        android:id="@+id/tv_detail_score_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/textView7_shimmer"
        tools:text="@string/dummy_text" />

    <TextView
        android:id="@+id/tv_placeholder_desc_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:background="@color/grey"
        android:text="@string/description"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_score_shimmer" />

    <TextView
        android:id="@+id/textView3_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:text="@string/genre"
        android:textColor="@color/grey"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_shimmer" />

    <TextView
        android:id="@+id/textView5_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:text="@string/released_date"
        android:textColor="@color/grey"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre_shimmer" />

    <TextView
        android:id="@+id/textView6_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:text="@string/language"
        android:textColor="@color/grey"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_date_shimmer" />

    <TextView
        android:id="@+id/textView7_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:text="@string/score"
        android:textColor="@color/grey"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_poster_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_language_shimmer" />

    <TextView
        android:id="@+id/text_description_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:textSize="14sp"
        android:background="@color/grey"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_placeholder_desc_shimmer"
        tools:text="@string/desc" />

</androidx.constraintlayout.widget.ConstraintLayout>